syntax = "proto3";

package shop;

import "google/protobuf/timestamp.proto";

option go_package = "kavshevnova.shop.v1;shopv1";

service ShopService {
  // Просмотр товаров пользователем
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc GetProductInfo (GetProductInfoRequest) returns (GetProductInfoResponse);
  // Покупки
  rpc MakeOrder (OrderRequest) returns (OrderResponse);
  rpc GetOrdersHistory (OrdersHistoryRequest) returns (OrdersHistoryResponse);
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message GetProductInfoRequest {
  int64 product_id =1;
}

message GetProductInfoResponse {
  int64 product_id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
}

message Product {
  int64 product_id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
}

message OrderRequest {
  int64 user_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message OrderResponse {
  bool success = 1;
  int64 order_id = 2;
  float sum = 3;
  google.protobuf.Timestamp order_time = 4;
}

message OrdersHistoryRequest {
  int64 user_id = 1;
}

message OrdersHistoryResponse {
  repeated Order orders = 1;
}

message Order {
  int64 id = 1;
  int64 user_id = 2;
  int64 product_id = 3;
  int32 quantity = 4;
  float sum = 5;
  google.protobuf.Timestamp order_time = 6;
}